Ajoute la font Work Sans pour Bordeaux Métropole

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       sizes="192x192"
       href="img/favicon/android-chrome-192x192.png"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Work+Sans"
+      rel="stylesheet"
+    />
     <meta
       name="apple-mobile-web-app-title"
       content="Simulateur de <%= VITE_CONTEXT_NAME %>"
