Ajoute du live support avec Chatwoot

--- a/index.html
+++ b/index.html
@@ -67,5 +67,24 @@
       >
     </noscript>
     <!-- built files will be auto injected -->
+    <div id="app"></div>
+
+    <script>
+      ;(function (d, t) {
+        var BASE_URL = "https://chatwoot.incubateur.net"
+        var g = d.createElement(t),
+          s = d.getElementsByTagName(t)[0]
+        g.src = BASE_URL + "/packs/js/sdk.js"
+        g.defer = true
+        g.async = true
+        s.parentNode.insertBefore(g, s)
+        g.onload = function () {
+          window.chatwootSDK.run({
+            websiteToken: "Kzc1NTBxjW9riARcjWTcjHr5",
+            baseUrl: BASE_URL,
+          })
+        }
+      })(document, "script")
+    </script>
   </body>
 </html>
