Affiche la bulle

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         g.onload = function () {
           window.chatwootSettings = {
-            hideMessageBubble: true,
+            hideMessageBubble: false,
             position: window.innerWidth >= 768 ? "right" : "left",
           }
           window.chatwootSDK.run({
