--- a/contribuer/public/admin/index.html
+++ b/contribuer/public/admin/index.html
@@ -27,10 +27,10 @@
   </head>
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
-    <!-- <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script> -->
+     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://betagouv.github.io/decap-cms/decap-cms.js"></script>
+<!--    <script src="https://betagouv.github.io/decap-cms/decap-cms.js"></script>-->
     <script src="main.js" type="text/babel"></script>
     <script src="description.js"></script>
     <script src="institution.js"></script>
