--- a/contribuer/public/admin/index.html
+++ b/contribuer/public/admin/index.html
@@ -12,9 +12,9 @@
       _paq.push(["trackPageView"])
       _paq.push(["enableLinkTracking"])
       ;(function () {
-        var u = "https://stats.data.gouv.fr/"
+        var u = "https://stats.beta.gouv.fr/"
         _paq.push(["setTrackerUrl", `${u}piwik.php`])
-        _paq.push(["setSiteId", "240"])
+        _paq.push(["setSiteId", "135"])
         var d = document,
           g = d.createElement("script"),
           s = d.getElementsByTagName("script")[0]
